--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-scrolllock": "^5.0.1",
     "socket.io-client": "^4.5.4",
